// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<H2 /> renders with a color prop 1`] = `
<Component
  style={
    Object {
      "color": "#fff",
      "fontSize": 34,
      "textAlign": "center",
    }
  }
>
  mockText
</Component>
`;

exports[`<H2 /> renders with just text 1`] = `
<Component
  style={
    Object {
      "color": "#000000",
      "fontSize": 34,
      "textAlign": "center",
    }
  }
>
  mockText
</Component>
`;
